--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@material-ui/core": "^4.7.0",
+		"@material-ui/icons": "^4.5.1",
 		"axios": "^0.19.0",
 		"jwt-decode": "^2.2.0",
+		"materialize-css": "^1.0.0-rc.2",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-router-dom": "^5.1.2",
