--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
 	"private": true,
 	"dependencies": {
 		"axios": "^0.19.0",
-		"bootstrap": "^4.4.1",
 		"jwt-decode": "^2.2.0",
 		"react": "^16.12.0",
-		"react-bootstrap": "^1.0.0-beta.16",
 		"react-dom": "^16.12.0",
 		"react-image-gallery": "^0.9.1",
 		"react-router-dom": "^5.1.2",
-		"react-scripts": "3.2.0"
+		"react-scripts": "3.2.0",
+		"rodal": "^1.7.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
